<resources>
    <string name="app_name">Android-Base</string>
    <string name="fabric_api_key">YOUR_API_KEY</string>
    <string name="title_activity_home">Schedule</string>
    <string name="title_activity_venue">Venue</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_session_title">Introduction to MotionLayouts</string>
    <string name="dummy_session_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</string>
    <string name="sessions_header">Sessions</string>
    <string name="speaker_head">About Speaker</string>
    <string name="dummy_date">23 \nSEPT.</string>
    <string name="dummy_venue_name">Emerald Event Center</string>
    <string name="dummy_venue_address">23 Nsikak Eduok Avenue, Uyo.</string>
    <string name="dummy_speaker_name">Abdulrahman Abdulkarim</string>
    <string name="dummy_speaker_spec">Android Developer</string>

    <string name="colorRed">#FD5587</string>
    <string name="colorBlue">#4F8AFD</string>
    <string name="colorYellow">#FDC24F</string>
    <string name="colorGreen">#62D582</string>
    <string name="sign_in">Sign In</string>
    <string name="cancel">Not Now</string>
    <string name="sign_in_message">Sign in to bookmark sessions , set alarm and explore other great features of the app</string>
    <string name="sign_in_not_header">Sign in to personalize your Schedule</string>
</resources>
