<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/large_toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:theme="@style/AppTheme.AppBarOverlay"
    app:layout_constrainedHeight="true">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarLarge"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_collapseMode="pin"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/userLarge"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:padding="8dp"
                app:srcCompat="@drawable/ic_user_placeholder" />

            <TextView
                android:id="@+id/titleLarge"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="-16dp"
                android:gravity="center"
                android:fontFamily="@font/sailecregular"
                android:text="@string/title_activity_venue"
                android:textAllCaps="true"
                android:textColor="@color/white" />

            <Switch
                android:id="@+id/switchViewLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:checked="false"
                android:thumb="@drawable/switch_thumb"
                android:track="@drawable/switch_track_colors" />
        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/date_holder"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/dummy_venue_name"
        android:textAlignment="center"
        android:fontFamily="@font/sailecmedium"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarLarge"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textView5"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/dummy_venue_address"
        android:fontFamily="@font/sailecregular"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/date_holder"
        app:layout_constraintStart_toStartOf="@+id/date_holder"
        app:layout_constraintTop_toBottomOf="@+id/date_holder" />

</android.support.constraint.ConstraintLayout>